# clearscript

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: index.md  installation.md  manifesto.md  quickstart.md
docs/assets/: bauhaus.css
docs/launch/: README.md  hn-post.md  x-thread.md  zhihu-post.md
scripts/: build_skill.sh
skill/: SKILL.md
skill/references/: asr-corrections.md  edit-patterns.md  speakers.md
src/clearscript/: __init__.py  cli.py  config.py  server.py
src/clearscript/core/: chunking.py  cost.py  pipeline.py
src/clearscript/ingest/: __init__.py  docx_ingest.py  json_ingest.py  md.py  registry.py  srt.py  txt.py  vtt.py
src/clearscript/prompts/layers/: l3_asr_fix.md
src/clearscript/prompts/stages/: 04_layered_edit.md
src/clearscript/providers/: anthropic.py  base.py  openai_compat.py
src/clearscript/storage/: filesystem.py
src/clearscript/web/: index.html
tests/: conftest.py
tests/unit/: test_chunking.py  test_cost.py  test_ingest_docx.py  test_ingest_json.py  test_ingest_md.py  test_ingest_srt.py  test_ingest_vtt.py  test_library.py  test_pipeline.py  test_pipeline_chunked.py  test_project_update.py  test_projects.py
