[project]
name = "clearscript"
version = "0.0.7"
description = "Local-first ASR transcript editor with a compounding terminology library. Bring your own model."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "clearscript contributors" }]
requires-python = ">=3.11"
keywords = [
    "transcript",
    "asr",
    "speech-to-text",
    "local-first",
    "interview",
    "podcast",
    "llm",
    "claude",
    "openai",
    "ollama",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "platformdirs>=4.2.0",
    "sqlalchemy>=2.0.30",
    "python-docx>=1.1.0",
    "pydantic>=2.7.0",
    "tomli>=2.0.1; python_version<'3.11'",
    "tomli-w>=1.0.0",
    "keyring>=24.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "srt>=3.5.3",
    "webvtt-py>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
embeddings = [
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
]
postgres = [
    "psycopg[binary]>=3.2.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

[project.scripts]
clearscript = "clearscript.cli:app"
cs = "clearscript.cli:app"

[project.urls]
Homepage = "https://github.com/Chen17-sq/clearscript"
Repository = "https://github.com/Chen17-sq/clearscript"
Issues = "https://github.com/Chen17-sq/clearscript/issues"
Changelog = "https://github.com/Chen17-sq/clearscript/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clearscript"]

[tool.hatch.build.targets.wheel.force-include]
"src/clearscript/prompts" = "clearscript/prompts"
"src/clearscript/library/schema.sql" = "clearscript/library/schema.sql"
"src/clearscript/web/index.html" = "clearscript/web/index.html"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
# RUF001/002/003: ambiguous Unicode chars are intentional — clearscript
# processes Chinese full-width punctuation as a feature, not a bug.
# B008: typer uses default-as-call pattern (typer.Argument, typer.Option).
ignore = ["E501", "RUF001", "RUF002", "RUF003", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["B011"]
# python-docx uses Word XML namespace conventions (rPr, pPr, rFonts, etc.)
# that violate Python casing — accept the existing names rather than fight them.
"src/clearscript/export/docx.py" = ["N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
